# Regime_Trading

./: .gitignore  ALL_SET.md  COMMANDS.md  COMPLETE_REFACTORING_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_SYSTEM_STATUS.md  DATA_PIPELINE_IMPLEMENTATION.md  ENHANCEMENT_COMPLETE.md  EXECUTION_FRAMEWORK_GUIDE.md  FINAL_SYSTEM_STATUS.md  FINAL_VERIFICATION.md  FOREX_STRATEGY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTRADAY_TRADING_GUIDE.md  MULTI_ASSET_TRADING_SYSTEM.md  Makefile  NARRATIVE_POLISH_COMPLETE.md  PORTFOLIO_ANALYSIS_GUIDE.md  PRE_PUSH_CHECKLIST.md  PROJECT_SUMMARY.md  QUANTINSTI_CAPSTONE_SUMMARY.md  QUANTINSTI_UPDATE.md  QUICK_START.md  README.md  READY_TO_USE.md  REFACTORING_TEST_RESULTS.md  REPORT_COHERENCE_ANALYSIS.md  REPORT_UPDATE_SUMMARY.md  SCANNER_AND_MICROSTRUCTURE_SUMMARY.md  SECOND_AGGREGATES_IMPLEMENTATION.md  SESSION_COMPLETE_SUMMARY.md  SETUP.md  START_HERE.md  SYSTEM_COMPLETE.md  SYSTEM_READY.md  UPDATE_EXECUTION_CONFIG.md  USER_GUIDE.md  WORKSTREAM_A_VALIDATION.md  alpaca_bot.py  (+9 more)
.cursor/: tasks.json
artifacts/: README.md  portfolio_analysis_20251022-131707.md  portfolio_analysis_20251022-133707.md  portfolio_analysis_20251028-230014.md  portfolio_analysis_20251028-235938.md
config/: company.acme.yaml  company.example.yaml  data_sources.yaml  scanner.yaml  settings.yaml
docs/: COMPLETE_SYSTEM_GUIDE.md  DATA_PIPELINE_HARDENING.md  DIRECTORY_STRUCTURE.md  FINAL_SUMMARY.md  PROJECT_STRUCTURE.md  REFERENCE_CORE.md  REFERENCE_PWA.md  REGIME_CLASSIFICATION_REFACTOR.md  RISK_MANAGEMENT.md  SETUP.md  SYSTEM_READY.md
lean/: .gitignore  README.md  (+4 more)
(+146 files in other folders)
